--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -15,7 +15,7 @@
 
         <ImageView
             android:id="@+id/itro_image"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/intro"
@@ -28,7 +28,7 @@
             android:id="@+id/login_btn_from_intro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/login"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
